--- a/z.html
+++ b/z.html
@@ -2,14 +2,13 @@
 <html>
 <body>
 
-<p>MY name is ZgHeL</p>
+<p>MY name is Zeghlol
+  my daughter name is zeghla</p>
 
 <p><b>wait u dont know me</b></p>
 
 </body>
 </html>
-
-<!DOCTYPE html>
 <html>
 <body>
 
